# winners-are

./: .gitignore  .replit  ORIGINAL_SUBMISSION.md  PRODUCT.md  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/: AGENTS.md
.agents/memory/: MEMORY.md  trustlayer-backend.md
artifacts/tustlayer/: .env.example  README.md  next.config.ts  package.json  requirements.txt
artifacts/tustlayer/.replit-artifact/: artifact.toml
artifacts/tustlayer/api/: index.py  requirements.txt
artifacts/tustlayer/backend/: main.py  version.py
artifacts/tustlayer/backend/core/: ai_orchestrator.py  config.py
artifacts/tustlayer/backend/integrations/: gemini_client.py  groq_client.py  nvidia_client.py  safe_browsing_client.py  sarvam_client.py  supabase_client.py
artifacts/tustlayer/backend/modules/app_forensics/: engine.py  reference_hashes.json  schemas.py  service.py
artifacts/tustlayer/backend/modules/chatbot/: router.py  schemas.py  service.py
artifacts/tustlayer/backend/modules/deepfake/: schemas.py  service.py
artifacts/tustlayer/backend/modules/document_scanner/: engine.py  router.py  schemas.py  service.py
artifacts/tustlayer/backend/modules/message_scanner/: __init__.py  schemas.py  service.py
artifacts/tustlayer/backend/modules/ocr/: engine.py
artifacts/tustlayer/src/app/: globals.css  layout.tsx  page.tsx
artifacts/tustlayer/src/app/product/: page.tsx
attached_assets/: TrustLayer_AI_PRD_FINAL_1781239378144.md
backend/: main.py  requirements.txt
test_docs/: generate_test_docs.py
test_docs/output/: manifest.json  test_macro_docx.docm
(+35 files in other folders)
