[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "imagehash>=4.3.1",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.9.0.80",
    "pillow>=11.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.7.0",
    "pymupdf>=1.24.0",
    "pytesseract==0.3.10",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "supabase==2.4.6",
    "tenacity==8.3.0",
    "uvicorn[standard]>=0.29.0",
]
